src/global/styles/typography.scss
@use './mixins/typo';
@use './mixins/lists';

html {
  @include typo.text;

  color: var(--sbb-font-default-color);
}

// TODO: Remove if webkit bug is resolved: https://bugs.webkit.org/show_bug.cgi?id=223814
::placeholder {
  color: var(--sbb-color-metal-default);
}

.sbb-text-xxs {
  @include typo.text-xxs--regular;
}

.sbb-text-xs {
  @include typo.text-xs--regular;
}

.sbb-text-s {
  @include typo.text-s--regular;
}

.sbb-text-m {
  @include typo.text-m--regular;
}

.sbb-text-l {
  @include typo.text-l--regular;
}

.sbb-text-xl {
  @include typo.text-xl--regular;
}

.sbb-text-bold {
  @include typo.text--bold;
}

.sbb-list {
  @include lists.list;
}

.sbb-step-list {
  @include lists.step-list;
}

.sbb-legend {
  @include typo.legend;
}

